--- a/src/home/home.css
+++ b/src/home/home.css
@@ -13,6 +13,17 @@
     align-items: center;
     flex-direction: column;
 }
+.dropDown{
+    display: none;
+}
+
+.MediarightContainer{
+    display: none;
+}
+.MediarightContainer.show {
+    display: none;
+}
+
 .rightContainer{
     background-color: #3A6351;
     font-size: 22px;
@@ -163,3 +174,4 @@ li:hover{
         overflow: hidden;
       }
 }
+
