--- a/src/home/home.css
+++ b/src/home/home.css
@@ -28,9 +28,9 @@
 .imgContainer{
     width: 99%;
     background: #d4f0e6;
-    background-image: url(/public/assets/nft-removebg-preview.png);
-    background-position: right;
-    background-size: contain;
+    background-image: url(/public/assets/n1.png);
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     height: 700px;
     margin-top: 30px;
@@ -39,7 +39,7 @@
     border-radius: 15px;
 
     h2{
-        font-size: 70px;
+        font-size: 80px;
         color: #dfcc9c;
         padding-left: 70px;
     }
@@ -53,7 +53,7 @@ li{
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
-    padding: 5px 10px;
+    padding:  10px;
     cursor: pointer;
     margin: 10px 0; 
     border-radius: 5px;
@@ -85,19 +85,21 @@ li:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;;
     width: 100%;
     padding: 20px;
-    margin-top: -50px;
   }
 
   .leftSlides{
-    width: 35%;
+    max-width: 550px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 220px;
+    flex-direction: column;
+    height: 350px;
     border-radius: 20px;
     background: #d4f0e6;
+    padding: 10px 20px;
   }
 
 
@@ -119,7 +121,8 @@ li:hover{
         h2{
             font-size: 45px;
             margin-top: -100px;
-            text-align: center;margin-left: -50px;
+            text-align: center;
+            margin-left: -50px;
         }
     }
 
@@ -164,6 +167,26 @@ li:hover{
         transition: all 0.3s ease-in-out; /* Smooth transition */
       }
       .no-scroll {
-        overflow: hidden;
+        overflow: 10%;
       }
+      .marqueDiv{
+        width: 100%;
+      }
+      .flex{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 20px;
+        width: 100%;
+
+    }
+}
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    width: 100%;
 }
