--- a/src/carousel/carousel.css
+++ b/src/carousel/carousel.css
@@ -9,19 +9,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  padding: 0 20px;
+  gap: 20px;
+  padding: 0 50px;
 }
 
 .image {
   width: auto;
-  height: 150px;
+  height: 250px;
   object-fit: cover;
 }
 
 .text {
   margin-top: 10px;
-  font-size: 18px;
+  font-size: 25px;
   color: #333;
 }
 
@@ -39,7 +39,7 @@
   color: #333;
   border-radius: 50%;
   padding: 10px;
-  margin: 5px;
+  margin: 10px 20px;
   transition: background 0.3s ease;
 }
 
@@ -52,6 +52,7 @@
 @media (max-width: 768px) {
   .carousel {
     width: 100%;
+    margin-bottom: 50px;
   }
   .content{
     flex-direction: column;
@@ -59,35 +60,17 @@
   }
 
   .image {
-    min-height: 100px;
+    min-height: 200px;
     width: auto;
   }
 
   .text {
-    font-size: 16px;
+    font-size: 20px;
   }
 
   .arrow {
     font-size: 12px;
-    padding: 8px;
-  }
-}
-
-@media (max-width: 480px) {
-  .carousel {
-    width: 100%;
-  }
-
-  .image {
-    height: 120px;
-  }
-
-  .text {
-    font-size: 14px;
-  }
-
-  .arrow {
-    font-size: 10px;
     padding: 6px;
   }
 }
+
