--- a/src/home/home.css
+++ b/src/home/home.css
@@ -69,17 +69,21 @@ li:hover{
     justify-content: center;
     align-items: center;
     padding: 10px;
-    font-size: 18px;
+    font-size: 22px;
     border-radius: 10px;
     border: none;
-    background: #F5E8C7;
+    background: #e9d6a5;
     width: 100%;
     cursor: pointer;
-    transition: background 0.3s ease;
+    color: black;
+    transition: all 0.3s ease;
   }
   
   .joinButton:hover {
-    background: #f5e8c7b7;
+    background: #f0e2beb7;
+  }
+  .joinButton:active {
+    background: #83703fb7;
   }
   .slidesContainer{
     display: flex;
@@ -167,7 +171,7 @@ li:hover{
         transition: all 0.3s ease-in-out; /* Smooth transition */
       }
       .no-scroll {
-        overflow: 10%;
+        overflow: hidden;
       }
       .marqueDiv{
         width: 100%;
