--- a/src/carousel/carousel.css
+++ b/src/carousel/carousel.css
@@ -3,6 +3,7 @@
   text-align: center;
   background: #33c976;
   border-radius: 10px;
+  margin-right: 20px;
 }
 
 .content {
@@ -34,17 +35,17 @@
 .arrow {
   font-size: 14px;
   background: none;
-  border: 1px solid whitesmoke;
   cursor: pointer;
   color: #333;
   border-radius: 50%;
   padding: 10px;
   margin: 10px 20px;
-  transition: background 0.3s ease;
+  transition: all 0.3s ease;
+  border: none;
 }
 
 .arrow:hover {
-  background: #ffffff;
+  background: #ffffffbb;
   color: #000;
 }
 
